feat: added search by name
